# PluginHost_for_AI

./: .gitignore  CMakeLists.txt  README.md  test_commands.json  test_commands_v11.json  test_commands_v12.json  test_commands_v2.json  verify_screenshots.py
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  BatchProcessor.cpp  BatchProcessor.h  JsonHelper.h  Main.cpp  OffscreenRenderer.cpp  OffscreenRenderer.h  PluginHost.cpp  PluginHost.h  SignalGenerator.cpp  SignalGenerator.h
test_plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test_synth/: SynthEditor.cpp  SynthEditor.h  SynthProcessor.cpp  SynthProcessor.h
